--- a/hima/experiments/sequence/configs/dhtm/pinball.yaml
+++ b/hima/experiments/sequence/configs/dhtm/pinball.yaml
@@ -1,6 +1,6 @@
 cells_per_column: 10
 
-external_vars_boost: 0  # set it non-zero to shift probability of choosing external var for factor
+external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
 
 inverse_temp_context: 1.0
@@ -21,19 +21,8 @@ context_factors_conf:
   var_score_lr: 0.001
   initial_log_factor_value: 0
   initial_synapse_value: 1
-  max_segments: 5000
+  max_segments: 50000
   fraction_of_segments_to_prune: 0.0
   max_segments_per_cell: 255
 
-internal_factors_conf:
-  n_vars_per_factor: 4
-  max_factors_per_var: 1
-  factor_lr: 0.05
-  synapse_lr: 0.005
-  segment_activity_lr: 0.001
-  var_score_lr: 0.001
-  initial_log_factor_value: 0
-  initial_synapse_value: 1
-  max_segments: 5000
-  fraction_of_segments_to_prune: 0.0
-  max_segments_per_cell: 255
+reset_context_period: 0
