--- a/hima/experiments/successor_representations/configs/agent/bio/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/gridworld.yaml
@@ -1,13 +1,18 @@
-gamma: 0.99
-observation_reward_lr: 0.05
-striatum_lr: 0.05
-sr_steps: 0
-approximate_tail: True
-inverse_temp: 10.0
+layer_conf: configs/agent/bio/layer/dhtm/gridworld.yaml
+# encoder_conf: configs/agent/bio/encoder/sp_grouped/gridworld.yaml
+# decoder_conf: configs/agent/bio/decoder/learned/gridworld.yaml
+camera_mode: null
+agent:
+  gamma: 0.99
+  observation_reward_lr: 0.05
+  striatum_lr: 0.05
+  sr_steps: 0
+  approximate_tail: True
+  inverse_temp: 10.0
 
-# p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
-exploration_eps: -1
-# predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
-action_value_estimate: predict
-# uniform | on_policy | off_policy
-sr_estimate_planning: uniform
+  # p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
+  exploration_eps: -1
+  # predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
+  action_value_estimate: predict
+  # uniform | on_policy | off_policy
+  sr_estimate_planning: uniform
