sr experiment: update metrics for bio agent

--- a/hima/experiments/successor_representations/configs/metrics/bio/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/metrics/bio/gridworld.yaml
@@ -1,21 +1,3 @@
-scalar_metrics:
-  class: ScalarMetrics
-  params:
-    metrics:
-      main_metrics/reward:
-        agg: np.sum
-        att: reward
-      main_metrics/steps:
-        agg: np.mean
-        att: steps
-      layer/surprise_hidden:
-        agg: np.mean
-        att: agent.agent.surprise
-    update_step: steps
-    update_period: 1
-    log_step: episodes
-    log_period: 1
-
 heatmap_metrics:
   class: HeatmapMetrics
   params:
@@ -26,4 +8,42 @@ heatmap_metrics:
     update_step: episodes
     update_period: 1
     log_step: episodes
-    log_period: 5
+    log_period: 50
+
+step_scalar_metrics:
+  class: ScalarMetrics
+  params:
+    metrics:
+      main_metrics/reward:
+        agg: np.sum
+        att: reward
+      layer/surprise_hidden:
+        agg: np.mean
+        att: agent.agent.surprise
+    update_step: steps
+    update_period: 1
+    log_step: episodes
+    log_period: 1
+
+episodic_scalar_metrics:
+  class: ScalarMetrics
+  params:
+    metrics:
+      main_metrics/steps:
+        agg: np.mean
+        att: steps
+    update_step: episodes
+    update_period: 1
+    log_step: episodes
+    log_period: 1
+
+trajectory:
+  class: Histogram
+  params:
+    name: agent/trajectory
+    att: state_visited
+    normalized: true
+    update_step: steps
+    update_period: 1
+    log_step: episodes
+    log_period: 50
