--- a/hima/experiments/successor_representations/configs/metrics/bio/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/metrics/bio/gridworld.yaml
@@ -1,3 +1,15 @@
+setup:
+  class: ImageMetrics
+  params:
+    metrics:
+      agent/setup:
+        att: environment.render
+    update_step: current_setup_id
+    update_period: 1
+    log_step: current_setup_id
+    log_period: 1
+    log_fps: 5
+
 heatmap_metrics:
   class: HeatmapMetrics
   params:
