--- a/hima/experiments/successor_representations/configs/metrics/bio/gridworld_mdp.yaml
+++ b/hima/experiments/successor_representations/configs/metrics/bio/gridworld_mdp.yaml
@@ -17,10 +17,13 @@ heatmap_metrics:
       agent/obs_reward:
         agg: np.mean
         att: obs_reward
+      agent/striatum:
+        agg: np.mean
+        att: agent.agent.striatum_weights
     update_step: episodes
-    update_period: 1
+    update_period: 100
     log_step: episodes
-    log_period: 50
+    log_period: 100
 
 step_scalar_metrics:
   class: ScalarMetrics
