--- a/hima/experiments/successor_representations/configs/agent/bio/gridworld_mdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/gridworld_mdp.yaml
@@ -1,4 +1,4 @@
-layer_conf: configs/agent/bio/layer/fchmm/gridworld.yaml
+layer_conf: configs/agent/bio/layer/dhtm/gridworld_mdp.yaml
 # srtd_conf: configs/agent/bio/srtd/gridworld.yaml
 # encoder_conf: configs/agent/bio/encoder/sp_grouped/gridworld.yaml
 # decoder_conf: configs/agent/bio/decoder/learned/gridworld.yaml
@@ -7,16 +7,16 @@ agent:
   gamma: 0.99
   observation_reward_lr: 0.1
   striatum_lr: 0.1
-  sr_steps: 10
+  sr_steps: 1
   approximate_tail: True
   inverse_temp: 10
 
   # p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
   exploration_eps: 0.05
   # predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
-  action_value_estimate: plan
+  action_value_estimate: predict
   # uniform | on_policy | off_policy
-  sr_estimate_planning: on_policy
+  sr_estimate_planning: uniform
 
   adaptive_sr: false
   adaptive_lr: false
