--- a/hima/experiments/successor_representations/configs/agent/bio/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/gridworld_pomdp.yaml
@@ -7,21 +7,23 @@ camera_mode: null
 agent:
   gamma: 0.99
   observation_reward_lr: 0.1
-  striatum_lr: 0.1
-  td_steps: 1
+  striatum_lr: 1.0
+  td_steps: 0
   inverse_temp: 10
 
   # p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
   exploration_eps: 0.05
   # predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
   action_value_estimate: plan
-  plan_steps: 10
+  plan_steps: 50
   approximate_tail: False
+  sr_early_stop_uniform: 0.1
+  sr_early_stop_goal: 0.01
+
   # uniform | on_policy | off_policy
   sr_estimate_planning: uniform
 
   adaptive_sr: false
   adaptive_lr: false
-  sr_early_stop: false
   lr_surprise: [0.2, 0.01]
   lr_td_error: [0.2, 0.01]
