--- a/hima/experiments/successor_representations/configs/agent/bio/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/gridworld_pomdp.yaml
@@ -1,6 +1,6 @@
 layer_conf: configs/agent/bio/layer/dhtm/gridworld_pomdp.yaml
 # srtd_conf: configs/agent/bio/srtd/gridworld.yaml
-dsftd_conf: configs/agent/bio/dsftd/gridworld.yaml
+striatum_conf: configs/agent/bio/striatum/gridworld.yaml
 # encoder_conf: configs/agent/bio/encoder/sp_grouped/gridworld.yaml
 # decoder_conf: configs/agent/bio/decoder/learned/gridworld.yaml
 camera_mode: null
@@ -15,6 +15,8 @@ agent:
   exploration_eps: 0.05
   # predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
   action_value_estimate: plan
+  use_cached_plan: True
+  learn_cached_plan: True
   plan_steps: 50
   approximate_tail: False
   sr_early_stop_uniform: 0.1
