lstm wm: update configs

--- a/hima/experiments/successor_representations/configs/agent/bio/layer/lstm/gridworld.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/lstm/gridworld.yaml
@@ -1,3 +1,8 @@
-n_hidden_vars: 1
-n_hidden_states: 30
-lr: 0.001
+n_hidden_vars: 10
+n_hidden_states: 10
+lr: 0.02
+use_batches: True
+batch_size: 100
+num_epochs: 300
+early_stop_loss: 0.01
+retain_old_trajectories: 0.7
