--- a/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/gridworld_mdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/gridworld_mdp.yaml
@@ -1,4 +1,9 @@
 cells_per_column: 1
+n_hidden_vars_per_obs_var: 1
+
+override_context: True
+replace_prior: False
+#bursting_threshold: 0.01
 
 external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
