--- a/hima/experiments/successor_representations/configs/agent/bio/layer/biodhtm/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/biodhtm/gridworld_pomdp.yaml
@@ -1,6 +1,10 @@
 cells_per_column: 40
 n_hidden_vars_per_obs_var: 3
 
+override_context: True
+replace_prior: False
+#bursting_threshold: 0.01
+
 external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
 
@@ -10,6 +14,9 @@ inverse_temp_internal: 1.0
 cell_activation_threshold: 0.0001
 cells_activity_lr: 0.9
 developmental_period: 30000
+
+enable_internal_connections: False
+enable_context_connections: True
 
 context_factors_conf:
   n_vars_per_factor: 4
