--- a/hima/experiments/successor_representations/configs/metrics/bio/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/metrics/bio/gridworld_pomdp.yaml
@@ -25,18 +25,18 @@ setup:
 #    log_step: episodes
 #    log_period: 100
 
-state_image:
-  class: GridworldStateImage
-  params:
-    name: representations/repr
-    repr_att: state_representation
-    state_att: environment.current_state
-    normalized: True
-    n_states: 25
-    update_step: steps
-    update_period: 1
-    log_step: episodes
-    log_period: 200
+#state_image:
+#  class: GridworldStateImage
+#  params:
+#    name: representations/repr
+#    repr_att: state_representation
+#    state_att: environment.current_state
+#    normalized: True
+#    n_states: 25
+#    update_step: steps
+#    update_period: 1
+#    log_step: episodes
+#    log_period: 200
 
 
 step_scalar_metrics:
@@ -84,28 +84,28 @@ episodic_scalar_metrics:
     log_step: episodes
     log_period: 1
 
-#trajectory:
-#  class: Histogram
-#  params:
-#    name: agent/trajectory
-#    att: state_visited
-#    normalized: true
-#    update_step: steps
-#    update_period: 1
-#    log_step: episodes
-#    log_period: 200
+trajectory:
+  class: Histogram
+  params:
+    name: agent/trajectory
+    att: state_visited
+    normalized: true
+    update_step: steps
+    update_period: 1
+    log_step: episodes
+    log_period: 200
 
 
-#value_function:
-#  class: Histogram
-#  params:
-#    name: agent/value_function
-#    att: state_value
-#    normalized: true
-#    update_step: steps
-#    update_period: 1
-#    log_step: episodes
-#    log_period: 25
+value_function:
+  class: Histogram
+  params:
+    name: agent/value_function
+    att: state_value
+    normalized: true
+    update_step: steps
+    update_period: 1
+    log_step: episodes
+    log_period: 200
 #
 #
 #q_function:
