--- a/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/animalai.yaml
@@ -1,9 +1,5 @@
 cells_per_column: 40
-n_hidden_vars_per_obs_var: 3
-
-override_context: True
-replace_prior: False
-#bursting_threshold: 0.01
+n_hidden_vars_per_obs_var: 1
 
 external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
@@ -14,9 +10,14 @@ inverse_temp_internal: 1.0
 cell_activation_threshold: 0.0001
 cells_activity_lr: 0.9
 developmental_period: 30000
+posterior_noise: 0.00001
+use_backward_messages: true
+# [forward, backward] uniform noise
+apply_noise: [false, true]
+noise_gamma: [0.0, 0.0]
+noise_scale: [0.1, 0.1]
 
-enable_internal_connections: False
-enable_context_connections: True
+visualize: false
 
 context_factors_conf:
   n_vars_per_factor: 4
@@ -29,6 +30,7 @@ context_factors_conf:
   segment_activity_lr: 0.001
   var_score_lr: 0.001
   fraction_of_segments_to_prune: 0.0
+  min_log_factor_value: -1
   max_segments_per_cell: 255
 
 # reset_context_period: 80
