--- a/hima/experiments/successor_representations/configs/agent/bio/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/animalai.yaml
@@ -1,6 +1,6 @@
 layer_conf: configs/agent/bio/layer/dhtm/animalai.yaml
-encoder_conf: configs/agent/bio/encoder/sp_grouped/animalai.yaml
-decoder_conf: configs/agent/bio/decoder/learned/animalai.yaml
+encoder_conf: configs/agent/bio/encoder/vae/animalai.yaml
+# decoder_conf: configs/agent/bio/decoder/learned/animalai.yaml
 camera_mode: clip
 agent:
   gamma: 0.9
