--- a/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/animalai.yaml
@@ -1,4 +1,4 @@
-cells_per_column: 40
+cells_per_column: 10
 n_hidden_vars_per_obs_var: 1
 
 external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
@@ -11,16 +11,16 @@ cell_activation_threshold: 0.0001
 cells_activity_lr: 0.9
 developmental_period: 30000
 posterior_noise: 0.00001
-use_backward_messages: true
+use_backward_messages: false
 # [forward, backward] uniform noise
-apply_noise: [false, true]
+apply_noise: [false, false]
 noise_gamma: [0.0, 0.0]
 noise_scale: [0.1, 0.1]
 
 visualize: false
 
 context_factors_conf:
-  n_vars_per_factor: 4
+  n_vars_per_factor: 3
   max_factors_per_var: 1
   factor_lr: 0.1
   synapse_lr: 0.1
