--- a/hima/experiments/successor_representations/configs/metrics/bio/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/metrics/bio/gridworld_pomdp.yaml
@@ -55,6 +55,15 @@ step_scalar_metrics:
       layer/segments_backward:
         agg: np.mean
         att: agent.num_segments_backward
+      layer/n_bursting_columns:
+        agg: np.mean
+        att: agent.agent.cortical_column.layer.n_bursting_vars
+      layer/state_information:
+        agg: np.mean
+        att: agent.agent.cortical_column.layer.state_information
+      layer/clean_surprise:
+        agg: np.mean
+        att: clean_surprise
 #      sf/td_error:
 #        agg: np.mean
 #        att: agent.agent.td_error
@@ -84,6 +93,21 @@ episodic_scalar_metrics:
     log_step: episodes
     log_period: 1
 
+cumulative_scalar_metrics:
+  class: ScalarMetrics
+  params:
+    metrics:
+      main_metrics/total_reward:
+        agg: np.sum
+        att: reward
+#      agent/n_states:
+#        agg: np.mean
+#        att: agent.n_states
+    update_step: steps
+    update_period: 1
+    log_step: episodes
+    log_period: 299
+
 trajectory:
   class: Histogram
   params:
@@ -93,19 +117,19 @@ trajectory:
     update_step: steps
     update_period: 1
     log_step: episodes
-    log_period: 200
+    log_period: 100
 
 
-value_function:
-  class: Histogram
-  params:
-    name: agent/value_function
-    att: state_value
-    normalized: true
-    update_step: steps
-    update_period: 1
-    log_step: episodes
-    log_period: 200
+#value_function:
+#  class: Histogram
+#  params:
+#    name: agent/value_function
+#    att: state_value
+#    normalized: true
+#    update_step: steps
+#    update_period: 1
+#    log_step: episodes
+#    log_period: 100
 #
 #
 #q_function:
