--- a/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/gridworld_pomdp.yaml
@@ -1,5 +1,5 @@
 cells_per_column: 40
-n_hidden_vars_per_obs_var: 3
+n_hidden_vars_per_obs_var: 1
 
 external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
@@ -10,24 +10,32 @@ inverse_temp_internal: 1.0
 cell_activation_threshold: 0.0001
 cells_activity_lr: 0.9
 developmental_period: 30000
+
 use_backward_messages: true
+inhibit_cells_by_default: true
 # resampling
-max_resamples: 10
+max_resamples: 0
 noise_scale: 0.0
 surprise_scale: 10.0
 # column prior
 column_prior: chinese-restaurant # uniform | dirichlet | one-hot | chinese-restaurant
+# ---- chinese-restaurant parameters
+new_state_weight: 1.0 # bias towards choosing a new cell
+freq_lr: 0.1
+# ----
+alpha: 1.0  # only for dirichlet prior, also affects initialization for observation trace
+# ---- additional prior
 use_observation_trace: false
 gamma: 0.9  # trace discount
-otp_lr: 0.01  # for observation_trace only
-otp_beta: 1.0  # for observation_trace only
-alpha: 1.0  # only for dirichlet prior, also affects initialization for observation trace
+otp_lr: 0.01  # trace lr
+otp_beta: 1.0  # trace normalization beta (softmax)
+# ----
 default_messages: both  # forward | backward | both
 
-visualize: false
+visualize: true
 
 context_factors_conf:
-  n_vars_per_factor: 4
+  n_vars_per_factor: 2
   max_factors_per_var: 1
   factor_lr: 0.5
   synapse_lr: 0.1
