--- a/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/gridworld_pomdp.yaml
@@ -1,5 +1,5 @@
 cells_per_column: 40
-n_hidden_vars_per_obs_var: 1
+n_hidden_vars_per_obs_var: 3
 
 external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
@@ -12,32 +12,28 @@ cells_activity_lr: 0.9
 developmental_period: 30000
 
 use_backward_messages: true
+reupdate_messages: true
 inhibit_cells_by_default: true
 # resampling
-max_resamples: 0
-noise_scale: 0.0
+max_resamples: 50
+min_resamples: 3
 surprise_scale: 10.0
 # column prior
 column_prior: chinese-restaurant # uniform | dirichlet | one-hot | chinese-restaurant
 # ---- chinese-restaurant parameters
 new_state_weight: 1.0 # bias towards choosing a new cell
 freq_lr: 0.1
-# ----
-alpha: 1.0  # only for dirichlet prior, also affects initialization for observation trace
-# ---- additional prior
-use_observation_trace: false
-gamma: 0.9  # trace discount
-otp_lr: 0.01  # trace lr
-otp_beta: 1.0  # trace normalization beta (softmax)
+# ---- dirichlet parameters
+alpha: 1.0
 # ----
 default_messages: both  # forward | backward | both
 
-visualize: true
+visualize: false
 
 context_factors_conf:
-  n_vars_per_factor: 2
+  n_vars_per_factor: 4
   max_factors_per_var: 1
-  factor_lr: 0.5
+  factor_lr: 0.01
   synapse_lr: 0.1
   initial_log_factor_value: -3
   initial_synapse_value: 0.5
