bio-dhtm: refactoring

--- a/hima/experiments/successor_representations/configs/agent/bio/layer/biodhtm/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/biodhtm/gridworld_pomdp.yaml
@@ -2,8 +2,7 @@ cells_per_column: 40
 n_hidden_vars_per_obs_var: 3
 
 override_context: True
-replace_prior: False
-#bursting_threshold: 0.01
+inhibit_cells_by_default: True
 
 external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
@@ -21,14 +20,13 @@ enable_context_connections: True
 context_factors_conf:
   n_vars_per_factor: 4
   max_factors_per_var: 1
-  factor_lr: 0.1
+  factor_lr: 0.001
   synapse_lr: 0.1
-  initial_log_factor_value: 0
+  initial_log_factor_value: -3
   initial_synapse_value: 0.5
   max_segments: 30000
   segment_activity_lr: 0.001
   var_score_lr: 0.001
   fraction_of_segments_to_prune: 0.0
+  min_log_factor_value: -5
   max_segments_per_cell: 255
-
-# reset_context_period: 80
