dhtm: update config

--- a/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/dhtm/gridworld_pomdp.yaml
@@ -1,5 +1,5 @@
-cells_per_column: 40
-n_hidden_vars_per_obs_var: 3
+cells_per_column: 50
+n_hidden_vars_per_obs_var: 1
 
 external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
@@ -10,19 +10,24 @@ inverse_temp_internal: 1.0
 cell_activation_threshold: 0.0001
 cells_activity_lr: 0.9
 developmental_period: 30000
+factors_update_delay: 0
 
 use_backward_messages: true
 reupdate_messages: true
 inhibit_cells_by_default: true
+min_log_factor_value: -5
+
+max_em_iterations: 100
+em_early_stop: false
 # resampling
-max_resamples: 50
-min_resamples: 3
-surprise_scale: 10.0
+max_resamples: 0
+min_resamples: 10
+surprise_scale: 10000.0
 # column prior
-column_prior: chinese-restaurant # uniform | dirichlet | one-hot | chinese-restaurant
+column_prior: dirichlet # uniform | dirichlet | one-hot | chinese-restaurant
 # ---- chinese-restaurant parameters
 new_state_weight: 1.0 # bias towards choosing a new cell
-freq_lr: 0.1
+freq_lr: 0.01
 # ---- dirichlet parameters
 alpha: 1.0
 # ----
@@ -31,9 +36,9 @@ default_messages: both  # forward | backward | both
 visualize: false
 
 context_factors_conf:
-  n_vars_per_factor: 4
+  n_vars_per_factor: 2
   max_factors_per_var: 1
-  factor_lr: 0.01
+  factor_lr: 0.1
   synapse_lr: 0.1
   initial_log_factor_value: -3
   initial_synapse_value: 0.5
