--- a/hima/experiments/successor_representations/configs/agent/bio/gridworld_pomdp_lstm.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/gridworld_pomdp_lstm.yaml
@@ -3,11 +3,11 @@ camera_mode: null
 agent:
   gamma: 0.8
   reward_lr: 0.1
-  learn_rewards_from_state: true
+  learn_rewards_from_state: false
   inverse_temp: 25
 
   # p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
-  exploration_eps: -1
+  exploration_eps: 0.05
   plan_steps: 50
   sr_early_stop_uniform: 0.1
   sr_early_stop_goal: 0.05
