--- a/hima/experiments/successor_representations/configs/agent/bio/layer/lstm/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/lstm/gridworld_pomdp.yaml
@@ -1,8 +1,10 @@
 n_hidden_vars: 10
 n_hidden_states: 10
-lr: 0.02
+lr: 0.002
 use_batches: True
-batch_size: 100
-num_epochs: 300
-early_stop_loss: 0.01
-retain_old_trajectories: 0.7
+batch_size: 50
+buffer_size: 1000
+num_updates: 50
+loss_propagation_schedule: 10
+early_stop_loss: 0.05
+retain_old_trajectories: 1.0
