--- a/hima/experiments/successor_representations/configs/agent/bio/layer/biodhtm/gridworld_pomdp.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/biodhtm/gridworld_pomdp.yaml
@@ -13,20 +13,19 @@ inverse_temp_internal: 1.0
 cell_activation_threshold: 0.0001
 cells_activity_lr: 0.9
 developmental_period: 30000
-
-enable_internal_connections: False
-enable_context_connections: True
+reward_modulation: false
 
 context_factors_conf:
   n_vars_per_factor: 4
   max_factors_per_var: 1
   factor_lr: 0.1
-  synapse_lr: 0.1
   initial_log_factor_value: -3
+  min_log_factor_value: -5
+  synapse_lr: 0.1
   initial_synapse_value: 0.5
   max_segments: 30000
-  segment_activity_lr: 0.001
   var_score_lr: 0.001
   fraction_of_segments_to_prune: 0.0
-  min_log_factor_value: -5
+  segment_activity_lr: 0.001
+  min_segment_activity: 0.0
   max_segments_per_cell: 255
