--- a/hima/experiments/successor_representations/configs/agent/bio/gridworld_pomdp_cscg.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/gridworld_pomdp_cscg.yaml
@@ -2,27 +2,18 @@ layer_conf: configs/agent/bio/layer/fchmm/gridworld_pomdp.yaml
 camera_mode: null
 agent:
   gamma: 0.8
-  observation_reward_lr: 0.1
-  striatum_lr: 0.1
-  td_steps: 0
-  use_sf_as_state: False
+  reward_lr: 0.1
+  learn_rewards_from_state: false
   inverse_temp: 25
 
   # p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
   exploration_eps: -1
-  # predict | plan | balance === 0-step | n-step | td-error based probability to use n-step
-  action_value_estimate: plan
-  use_cached_plan: False
-  learn_cached_plan: False
   plan_steps: 50
-  approximate_tail: False
   sr_early_stop_uniform: 0.1
   sr_early_stop_goal: 0.05
 
   # uniform | on_policy | off_policy
   sr_estimate_planning: uniform
 
-  adaptive_sr: false
-  adaptive_lr: false
   lr_surprise: [0.2, 0.01]
-  lr_td_error: [0.2, 0.01]
+
