--- a/hima/experiments/successor_representations/configs/agent/bio/layer/biodhtm/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/biodhtm/animalai.yaml
@@ -2,8 +2,7 @@ cells_per_column: 40
 n_hidden_vars_per_obs_var: 3
 
 override_context: True
-replace_prior: False
-#bursting_threshold: 0.01
+inhibit_cells_by_default: True
 
 external_vars_boost: 10  # set it non-zero to shift probability of choosing external var for factor
 unused_vars_boost: 0
@@ -14,21 +13,19 @@ inverse_temp_internal: 1.0
 cell_activation_threshold: 0.0001
 cells_activity_lr: 0.9
 developmental_period: 30000
-
-enable_internal_connections: False
-enable_context_connections: True
+reward_modulation: false
 
 context_factors_conf:
   n_vars_per_factor: 4
   max_factors_per_var: 1
   factor_lr: 0.1
+  initial_log_factor_value: -3
+  min_log_factor_value: -5
   synapse_lr: 0.1
-  initial_log_factor_value: 0
   initial_synapse_value: 0.5
   max_segments: 30000
-  segment_activity_lr: 0.001
   var_score_lr: 0.001
   fraction_of_segments_to_prune: 0.0
+  segment_activity_lr: 0.001
+  min_segment_activity: 0.0
   max_segments_per_cell: 255
-
-# reset_context_period: 80
