--- a/hima/experiments/successor_representations/configs/agent/bio/layer/fchmm/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/fchmm/animalai.yaml
@@ -1,5 +1,8 @@
-cells_per_column: 10
-batch_size: 500
-em_iterations: 1000
-lr: 0.2
+cells_per_column: 20
+batch_size: 100000
+em_iterations: 500
+pseudo_count: 0.002
+term_early: true
+lr: 0.0
 alpha: 1.0  # dirichlet initialization dist parameter
+pretrain_data: 'logs/animalai_trajectories_50.npz'
