sr experiment: update configs for dhtm

--- a/hima/experiments/successor_representations/configs/agent/bio/animalai_dhtm.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/animalai_dhtm.yaml
@@ -1,11 +1,11 @@
 layer_conf: configs/agent/bio/layer/biodhtm/animalai.yaml
-encoder_conf: configs/agent/bio/encoder/vae/animalai.yaml
-camera_mode: clip  # null | clip | abs
+encoder_conf: configs/agent/bio/encoder/kmeans/animalai.yaml
+camera_mode: null  # null | clip | abs
 agent:
   gamma: 0.9
   reward_lr: 0.1
-  learn_rewards_from_state: true
-  inverse_temp: 50
+  learn_rewards_from_state: false
+  inverse_temp: 25
 
   # p \in [0, 1]: eps-greedy | otherwise (use -1): softmax
   exploration_eps: -1
