sr experiment: add animalai lstm configs

--- a/hima/experiments/successor_representations/configs/agent/bio/layer/lstm/animalai.yaml
+++ b/hima/experiments/successor_representations/configs/agent/bio/layer/lstm/animalai.yaml
@@ -1,6 +1,11 @@
-n_hidden_vars: 80
-n_hidden_states: 4
-
-lr: 0.0006
-loss_propagation_schedule: 20
+n_hidden_vars: 10
+n_hidden_states: 10
+lr: 0.002
+use_batches: True
+batch_size: 50
+buffer_size: 1000
+num_updates: 50
+loss_propagation_schedule: 10
+early_stop_loss: 0.05
+retain_old_trajectories: 1.0
 
